# tau-lang

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
docs/: Design.md  old-design.md
lexer/: lexer.hpp
parser/: Parser.cpp  Parser.hpp  Token.hpp  TokenStream.cpp  TokenStream.hpp
src/: CMakeLists.txt  main.cpp
src/app_tests/: CMakeLists.txt  TestHelpers.hpp
src/app_tests/parser/: CMakeLists.txt  TokenStream.cpp  TokenStreamTest.cpp
src/driver/: Driver.cpp  Driver.hpp
src/lexicon/: ElementIf.hpp  If.hpp
src/parser/: Ast.hpp  Lexeme.hpp  Parser.cpp  Parser.hpp  Something.tau  Token.hpp  TokenStream.cpp  TokenStream.hpp
src/reporter/: Reporter.cpp  Reporter.hpp
src/test_code/: step_0.tau  step_1.tau  step_2.tau
test_code/: simple.tau  step_0.tau  step_3.tau
